# mark

./: .all-contributorsrc  .env.local  .eslintrc.js  .gitignore  .npmrc  CHANGELOG.md  Cargo.toml  LICENSE  NOTICES-node.md  NOTICES-rust.md  README.md  RELEASE_NOTES.md  add_editor_placeholders.js  add_final_child_keys.js  add_final_missing_keys.js  add_missing_translations.js  add_parent_keys_translations.js  add_remaining_translations.js  auto_fix_json.py  compare_translation_keys.js  compare_translations.js  debug-preload.html  electron-builder.yml  electron-testing-guide.md  electron.vite.config.1750093957746.mjs  electron.vite.config.1751388964471.mjs  electron.vite.config.js  electron.vite.config.mjs  eslint.config.js  extract_translation_keys.js  extract_translation_keys_from_code.js  extracted_translation_keys.json  extracted_translation_keys_flat.json  fix_json.py  fix_translations.js  generate_translations.js  jsconfig.json  missing_keys_template.json  package-lock.json  package.json  (+15 more)
.github/: CODE_OF_CONDUCT.md  FUNDING.yml
docs/: F-CASK-PUBLISH-HANDOFF.md  F-UPDATER-WIRE-PLUGIN-handoff.md  FAQ.md  KEYBINDINGS_LINUX.md  KEYBINDINGS_OSX.md  KEYBINDINGS_WINDOWS.md  README.md  THEMES.md  a11y-baseline-v2.0.md  b4-step-10-hunspell-decision.md  ci-warnings-allowlist.md  (+3 more)
src-tauri/: Cargo.toml  Info.partial.plist  about.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cancel_log.rs  dialog.rs  legacy.rs  m001_lifecycle.rs  m001_panic.rs  m001_pdf.rs  m001_save_close.rs  m001_security.rs  m001_validate.rs  m005_prefs.rs  m006_shortcuts.rs  m007_spell.rs  m008_fonts.rs  m009_menu.rs  m010_security.rs  m014_encoding.rs  m015_pandoc.rs  m016_updater.rs  m017_recent.rs  m018_screenshot.rs  m019_datacenter.rs  m020_cli.rs  m021_default_handler.rs  m_v1_compat.rs  main.rs  migration_strings.rs  mt_paths.rs  prefs.rs  snapshot.rs
src-tauri/src/m005_migrate/: data_center.rs  fixture_e2e.rs  keybindings.rs  keychain.rs  mod.rs  preferences.rs  recent_docs.rs  runner.rs  snapshot.rs
src-tauri/src/m013b/: error.rs  fs.rs  mod.rs  search.rs  state.rs  watch.rs
(+535 files in other folders)
