[package]
name = "mark"
description = "Mark — Tauri-based Markdown editor (Phase-B rewrite of xronocode/mark)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mark"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"

[dev-dependencies]
tempfile = "3"
