[package]
name = "mark"
description = "Mark — Tauri-based Markdown editor (Phase-B rewrite of xronocode/mark)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mark"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"
rfd = "0.17"
notify-debouncer-full = "0.5"
ignore = "0.4"
regex = "1"
chardet = "0.2"
encoding_rs = "0.8"
clap = { version = "4", features = ["derive"] }
font-kit = "0.14"
keyring = "3"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "time"] }
